syntax = "proto3";
package server.v1;

option go_package = "github.com/ethos-works/infinityvm/server/pkg/types";

// Job represents a program to be executed by the coprocessor with specific
// inputs.
message Job {
  // The job ID generated by the InfinityVM chain.
  uint32 id = 1;
  // The ZK program verification key
  bytes program_verifying_key = 2;
  // Program execution input
  bytes input = 3;
  // The address of the contract to execute a callback with a result with
  bytes contract_address = 4;
  // CPU cycle limit for job execution
  uint64 max_cycles = 5;
}
